Создание тикета в модальном окне